--- a/landscape.yml
+++ b/landscape.yml
@@ -1331,6 +1331,13 @@ landscape:
         name: General
         items:
           - item:
+            name: IBM
+            homepage_url: 'https://www.ibm.com/'
+            stock_ticker: IBM
+            logo: ibm.svg
+            twitter: 'https://twitter.com/ibm'
+            crunchbase: 'https://www.crunchbase.com/organization/ibm'
+          - item:
             name: B.Yond
             homepage_url: 'https://www.b-yond.com/'
             stock_ticker: null
